newlly added common faults api
