# controllers/faults.js
@@ -1,0 +1,13 @@
+"use strict"
+
+var express = require('express');
+var insights = require('../models/faults');
+var helper = require('./helpers/utility.js');
+
+
+//get most fault models  details
+module.exports.getCommonFaults = function(req, res, next) { 
+	faults.getCommonFaults(function(err, result){  	  
+	    helper.sendResponse(res, err, result); 
+	});
+};
