# models/commonfaultsdummy.js
@@ -1,0 +1,10 @@
+'use strict';
+
+module.exports.commonFaults = [
+                         {                       	
+                        	 "Model": "Model 3",
+                        	 "Make": "Make 1",
+                        	 "no_of_faults": 163,
+                        	 "failureType":"Water leak"
+                         }
+                       ];
